@startuml

title __VALORACIONS's Class Diagram__\n

  namespace  {
    namespace b.edu.model {
      namespace Valoracions {
        class ub.edu.model.Valoracions.CorValoracio {
            + CorValoracio()
        }
      }
    }
  }
  

  namespace  {
    namespace b.edu.model {
      namespace Valoracions {
        class ub.edu.model.Valoracions.EstrellasValoracio {
            - estrellas : int
            + EstrellasValoracio()
            + getEstrellas()
            + setEstrellas()
            + toString()
            + updateRating()
        }
      }
    }
  }
  

  namespace  {
    namespace b.edu.model {
      namespace Valoracions {
        abstract class ub.edu.model.Valoracions.Valoracio {
            # data : String
            - idClient : String
            - idEpisodi : int
            - idTemporada : int
            - idUsuari : String
            - idVal : int
            - nomSerie : String
            + Valoracio()
            + getData()
            + getIdClient()
            + getIdEpisodi()
            + getIdTemporada()
            + getIdUsuari()
            + getIdVal()
            + getNomSerie()
            + isSameValoration()
            + setData()
            + setIdClient()
            + setIdEpisodi()
            + setIdTemporada()
            + setIdUsuari()
            + setIdVal()
            + setNomSerie()
        }
      }
    }
  }
  

  namespace  {
    namespace b.edu.model {
      namespace Valoracions {
        class ub.edu.model.Valoracions.ValoracioFactory {
            + createValoracio()
        }
      }
    }
  }
  

  ub.edu.model.Valoracions.CorValoracio -up-|> ub.edu.model.Valoracions.Valoracio
  ub.edu.model.Valoracions.EstrellasValoracio -up-|> ub.edu.model.Valoracions.Valoracio


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
